tests/error/modInteger-bytestring-wrong-1st-argument.uplc
(program 1.0.0[[(builtin modInteger)(con bytestring #AFD3)](con integer 10)])